--- a/ingredientes/Ingredientex.html
+++ b/ingredientes/Ingredientex.html
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark btn-light">
   <div class="container-fluid d-flex justify-content-between align-items-center">
    
-    <a class="navbar-brand" href="https://julietacast.github.io/HERBALESSENCS/HERBAL.html">
+    <a class="navbar-brand" href="https://julietacast.github.io/herbal-/HERBAL.html">
       <img src="IMAGENES/herbalessences.png" alt="Herbal Essences" class="logo-img">
     </a>
     
