--- a/Contacto/sostenibilidad.html
+++ b/Contacto/sostenibilidad.html
@@ -19,7 +19,7 @@
     </div>
 
     <!-- Contenido de la Página -->
-    <a class="navbar-brand" href="https://julietacast.github.io/HERBALESSENCS/HERBAL.html">
+    <a class="navbar-brand" href="https://julietacast.github.io/herbal-/HERBAL.html">
         <img src="IMAGENES/herbalessences.png" alt="Herbal Essences" class="logo-img">
     </a>
 
