--- a/Aplicacion/Aplicación.html
+++ b/Aplicacion/Aplicación.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <!-- Navbar Brand -->
-  <a class="navbar-brand" href="https://julietacast.github.io/HERBALESSENCS/HERBAL.html">
+  <a class="navbar-brand" href="https://julietacast.github.io/herbal-/HERBAL.html">
     <img src="IMAGENES/herbalessences.png" alt="Herbal Essences" class="logo-img">
   </a>
   
