--- a/HERBAL.html
+++ b/HERBAL.html
@@ -24,7 +24,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark btn-light">
   <div class="container-fluid d-flex justify-content-between align-items-center">
    
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="https://julietacast.github.io/herbal-/HERBAL.html">
       <img src="IMAGENES/herbalessences.png" alt="Herbal Essences" class="logo-img">
     </a>
   
