--- a/ingredientes/Ingredientex.html
+++ b/ingredientes/Ingredientex.html
@@ -96,7 +96,7 @@
       <p id="carousel-description">Sumérgete en la esencia de ingredientes botánicos, el corazón de cada ritual para un cabello sano y radiante.</p>
     </div>
 <div>
-    <a href="https://julietacast.github.io/HERBALESSENCS_/Aplicacion/Aplicaci%C3%B3n.html" class="apply-button">
+    <a href="https://julietacast.github.io/herbal-/ingredientes/Ingredientex.html" class="apply-button">
         Aplicarlo
     </a>
 </div>
